# usage-monitor

./: .gitignore  LICENSE  README.md  biome.json  components.json  index.html  mise.toml  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.ts  vitest.config.ts
.husky/: pre-commit
src/: App.test.tsx  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/ui/: badge.tsx  button.tsx  card.tsx  chart.tsx  label.tsx  progress.tsx  sheet.tsx
src/lib/: tauri.ts
src/types/: contracts.ts
